@startuml AeroLink_Polyglot_ERD
title AeroLink Airline Systems Platform — Entity Relationship Diagram (ERD)\n(Polyglot Database Architecture: Relational PostgreSQL & NoSQL DynamoDB)

' Force High-Contrast Black & White Monochrome Style
skinparam backgroundcolor white
skinparam monochrome true
skinparam shadowing false
skinparam classFontSize 11
skinparam classFontName "Arial"
skinparam arrowThickness 1.2
skinparam stereotypeCBackgroundColor white
skinparam stereotypeCBorderColor black
skinparam classBorderColor black
skinparam classBackgroundColor white
skinparam arrowColor black
skinparam titleFontSize 15
skinparam titleFontName "Arial"

' Legend to clearly denote Database boundary regions
legend right
  |= Database Type |= Service Name |
  | Relational (PostgreSQL) | Passenger, Flight, Booking, Payment Services |
  | NoSQL Document (DynamoDB) | Baggage Tracking Service |
endlegend

' Row 1 Layout Alignment
passengers -[hidden]right- flights

' Row 2 Layout Alignment
bookings -[hidden]right- baggage_items

' Row 3 Layout Alignment
payments -[hidden]right- baggage_events

entity "passengers" as passengers << (R, #white) RDS PostgreSQL — Passenger Service >> {
  * **id** : UUID [PK]
  --
  * **email** : varchar(255) [Unique, Index]
  * **hashed_password** : varchar(255)
  first_name : varchar(255)
  last_name : varchar(255)
  passport_number : varchar(255) [Encrypted]
  phone_number : varchar(255)
  is_active : boolean
  is_anonymized : boolean
  role : varchar(50)
  created_at : timestamp
  updated_at : timestamp
}

entity "flights" as flights << (R, #white) RDS PostgreSQL — Flight Service >> {
  * **id** : UUID [PK]
  --
  * **flight_number** : varchar(10) [Unique, Index]
  * **origin_airport** : varchar(3) [Index]
  * **destination_airport** : varchar(3) [Index]
  * **departure_time** : timestamp [Index]
  * **arrival_time** : timestamp
  * **total_seats** : integer
  * **available_seats** : integer
  * **base_price** : numeric(10,2)
  * **status** : flight_status_enum [Index]
  created_at : timestamp
  updated_at : timestamp
}

entity "bookings" as bookings << (R, #white) RDS PostgreSQL — Booking Service >> {
  * **id** : UUID [PK]
  --
  * **booking_reference** : varchar(10) [Unique, Index]
  * **passenger_id** : UUID [FK, Index]
  * **flight_id** : UUID [FK, Index]
  * **seat_number** : varchar(4)
  * **price_paid** : numeric(10,2)
  * **status** : booking_status_enum
  * **saga_state** : varchar(50)
  created_at : timestamp
  updated_at : timestamp
}

entity "payments" as payments << (R, #white) RDS PostgreSQL — Payment Service >> {
  * **id** : UUID [PK]
  --
  * **booking_id** : UUID [FK, Index]
  * **amount** : numeric(10,2)
  * **currency** : varchar(3)
  gateway_transaction_id : varchar(255)
  * **payment_method_token** : varchar(255)
  * **status** : payment_status_enum
  created_at : timestamp
  updated_at : timestamp
}

entity "baggage_items" as baggage_items << (N, #white) AWS DynamoDB — Baggage Service >> {
  * **baggage_id** : string [Hash Key / PK]
  --
  * **passenger_id** : string [Logical FK]
  * **flight_id** : string [Logical FK]
  * **weight_kg** : float
  * **current_status** : string
  * **history** : array (BaggageEvent)
}

entity "baggage_events" as baggage_events << (E, #white) Embedded JSON — Baggage History >> {
  * **timestamp** : string
  * **location** : string
  * **status** : string
}

' Entity relationships (Grid-Friendly Crow's Foot Notation)
' Note: Dotted lines show logically resolved relationships across decoupled databases
passengers -down-||..o{ bookings : "places"
flights -down-||..o{ bookings : "hosts"
bookings -down-||--|| payments : "requires"

passengers -down-||..o{ baggage_items : "owns"
flights -down-||..o{ baggage_items : "transports"

' Embedded relationship within NoSQL document
baggage_items -down-||--|{ baggage_events : "contains history"

@enduml
